added P and H1 tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>git-bash-issue</title>
 </head>
 <body>
-    
+    <h1>i can push code</h1>
+    <h2> i can delete code </h2>
+    <p>hello</p>
+    <P>Hello</P>
 </body>
 </html>
