--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>i can push code</h1>
     <h2> i can delete code </h2>
-    <p>hello</p>
+    <p>Please enter your fake address</p>
     <P>Hello</P>
 </body>
 </html>
