added my picture

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <H1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore provident eaque impedit nulla sequi deleniti vero assumenda cupiditate ratione libero nostrum nihil labore expedita laborum reprehenderit soluta illo, enim quas.</H1>
 
     <h2>Amar sonal bangla</h2>
-    <img src="pexels-mike-120049.jpg" alt="">
+    <img src="download.jpg" alt="">
 </body>
 </html>
