--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <h2>Amar sonal bangla</h2>
     <img src="img/download.jpg" alt="">
     <p>আসকে আমার মং বালো নেই</p>
-    target
+    <p>বদ্দা, আসকে আমার মং বালো</p>
 </html>
