piriti noy amar ka

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <p>আসকে আমার মং বালো নেই</p>
     <p>বদ্দা, আসকে আমার মং বালো</p>
     <p>amar sob tuku bissas je diyecheche venge</p>
+    <p>piriti noy amar kaj</p>
+    
 
 </html>
