demo text changed

--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
     <P>Hello</P>
     <H1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore provident eaque impedit nulla sequi deleniti vero assumenda cupiditate ratione libero nostrum nihil labore expedita laborum reprehenderit soluta illo, enim quas.</H1>
 
-    <h2>Amar sonal bangla</h2>
+    <h2>Takibul Islam FUad</h2>
     <img src="img/download.jpg" alt="">
-    <p>আসকে আমার মং বালো নেই</p>
-    <p>বদ্দা, আসকে আমার মং বালো</p>
-    <p>amar sob tuku bissas je diyecheche venge</p>
-    <p>piriti noy amar kaj</p>
-    
+    <p>BGMEA University OF Fashion and Technology</p>
+    <p>Dept Of AMT</p>    
 
 </html>
