work epxperianced added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
     <p>amar sob tuku bissas je diyecheche venge</p>
     <p>piriti noy amar kaj</p>
     
+    <div>
+        <h1>Im Takib, Still working as A Data Analytics expert on Upwork and fiver</h1>
+        <p>Upwork Status: <strong></strong>top Rated </strong></p>
+        <p>Upwork Status: <strong></strong>Lavel 1 </strong></p>
+
+    </div>
 
 </html>
