--- a/index.html
+++ b/index.html
@@ -7,18 +7,5 @@
     <title>git-bash-issue</title>
 </head>
 <body>
-    <h1>i can push code</h1>
-    <h2> i can delete code </h2>
-    <p>Hello</p>
-    <P>Hello</P>
-    <H1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore provident eaque impedit nulla sequi deleniti vero assumenda cupiditate ratione libero nostrum nihil labore expedita laborum reprehenderit soluta illo, enim quas.</H1>
-
-    <h2>Amar sonal bangla</h2>
-    <img src="img/download.jpg" alt="">
-    <p>আসকে আমার মং বালো নেই</p>
-    <p>বদ্দা, আসকে আমার মং বালো</p>
-    <p>amar sob tuku bissas je diyecheche venge</p>
-    <p>piriti noy amar kaj</p>
-    
-
+    <h1>Everyting is Empty</h1>
 </html>
