--- a/index.html
+++ b/index.html
@@ -7,24 +7,6 @@
     <title>git-bash-issue</title>
 </head>
 <body>
-    <h1>i can push code</h1>
-    <h2> i can delete code </h2>
-    <p>Hello</p>
-    <P>Hello</P>
-    <H1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore provident eaque impedit nulla sequi deleniti vero assumenda cupiditate ratione libero nostrum nihil labore expedita laborum reprehenderit soluta illo, enim quas.</H1>
-
-    <h2>Takibul Islam FUad</h2>
+    <P>Hi im Takibul</P>
     <img src="img/download.jpg" alt="">
-    <p>BGMEA University OF Fashion and Technology</p>
-    <p>Dept Of AMT</p> 
-    
-    <div>
-        <h1>Im Takib, Still working as A Data Analytics expert on Upwork and fiver</h1>
-        <p>Upwork Status: <strong></strong>top Rated </strong></p>
-        <p>Upwork Status: <strong></strong>Lavel 1 </strong></p>
-
-        <h4>For some reason i dont enjoying marketing sector at all, thats why im chenging my carrier path</h4>
-
-    </div>
-
 </html>
