--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git-bash-issue</title>
+    <title>git-bash-issuessssssssssssss</title>
 </head>
+<html>
 <body>
-    <P>Hi im Takibul</P>
-    <img src="img/download.jpg" alt="">
+    <p></p>
+</body>
 </html>
